# qcbc

./: Makefile  README.md  pyproject.toml
qcbc/: main.py  qcbc_ambiguous.py  qcbc_complexity.py  qcbc_content.py  qcbc_homopolymer.py  qcbc_pdist.py  qcbc_volume.py  utils.py
tests/: qcbc_examples.ipynb  qcbc_examples_split-seq.ipynb
tests/10xFB/: feature_barcodes.txt
tests/cellhash/: feature_barcodes.txt
tests/clicktag/: feature_barcodes.txt
tests/multiseq/: feature_barcodes.txt
tests/parsebio_wt48/: onlist_bc1.txt
tests/sugarseq/: feature_barcodes.txt  feature_barcodes_v2.txt
tests/tapseq/: feature_barcodes.txt
